# cpp_benchmarks

./: CMakeLists.txt  README.md
design_patterns/builder/: Person.cpp  Person.h  PersonAddressBuilder.cpp  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonBuilderFacets.cpp  PersonJobBuilder.cpp  PersonJobBuilder.h  html_element.cpp
memory_allocation/: memory.cpp  memory_results.md
utils/: stop_watch.cpp  stop_watch.hpp
